--- a/Fancy-weather/src/assets/styles/style.css
+++ b/Fancy-weather/src/assets/styles/style.css
@@ -239,6 +239,7 @@ button:active, button:focus {
 
 .today img {
     display: none;
+    z-index: 5;
 }
 
 .today img[src*="images"] {
@@ -249,6 +250,7 @@ button:active, button:focus {
     display: flex;
     flex-direction: column;
     padding-bottom: 2.3vw;
+    z-index: 3;
 }
 
 
@@ -363,6 +365,10 @@ button:active, button:focus {
         width: 29vw;
     }
 
+    .error {
+        font-size: 2vw;
+    }
+
     .weather-info {
         width: 100%;
     }
@@ -441,6 +447,10 @@ button:active, button:focus {
 
     .search-text {
         width: 51vw;
+    }
+
+    .error {
+        font-size: 4vw;
     }
 
     .title {
