--- a/Fancy-weather/src/assets/styles/style.css
+++ b/Fancy-weather/src/assets/styles/style.css
@@ -1,4 +1,9 @@
-
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/Montserrat-Regular.ttf');
+}
 
 html {
     margin: 0;
@@ -202,7 +207,8 @@ button:active, button:focus {
     flex-direction: row;
     justify-content: space-between;
     color: #fff;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Montserrat', 'Lucida Sans', 'Lucida Sans Regular';
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 }
 
 .title {
